# remindo-api

./: .coverage  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  mypi.ini  noxfile.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
.nox/tests-3-7/: pyvenv.cfg
.nox/tests-3-8/: pyvenv.cfg
.pytype/: .ninja_log  build.ninja
.pytype/imports/: remindo-api.tests.conftest.imports  remindo-api.tests.test_cluster.imports  remindo-api.tests.test_helloworld.imports  remindo-api.tests.test_moments.imports  remindo-api.tests.test_recipes.imports  remindo-api.tests.test_reliability.imports  remindo-api.tests.test_results.imports  remindo-api.tests.test_stats.imports  remindo-api.tests.test_studies.imports  remindo_api.client.imports  remindo_api.example.fetchdata.imports  remindo_api.example.imports  remindo_api.recipe.imports
.pytype/pyi/remindo-api/: noxfile.pyi
.pytype/pyi/remindo-api/tests/: conftest.pyi  test_cluster.pyi  test_helloworld.pyi  test_moments.pyi  test_recipes.pyi  test_reliability.pyi  test_results.pyi  test_stats.pyi  test_studies.pyi
.pytype/pyi/remindo_api/: apikey.pyi  client.pyi  cluster.pyi  collectdata.pyi  example.pyi  helloworld.pyi  item.pyi  moment.pyi  recipe.pyi  reliability.pyi  request.pyi  result.pyi  stats.pyi  study.pyi  utils.pyi
.pytype/pyi/remindo_api/example/: fetchdata.pyi
docs/: .readthedocs.yml  conf.py  index.rst  reference.rst  requirements.txt
remindo_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
remindoapi/: cluster.py  collectdata.py  example.py  helloworld.py  item.py  request.py
src/remindo_api/: __init__.py  apikey.py  client.py  cluster.py  collectdata.py  example.py  fetchdata.py  helloworld.py  item.py  moment.py  recipe.py  reliability.py  request.py  result.py  stats.py  study.py  textcleaner.py  utils.py
src/remindo_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/remindo_api/example/: config.cfg  fetchdata.py
src/remindoapi/: cluster.py  example.py  helloworld.py  item.py  moment.py  recipe.py  reliability.py  request.py  result.py  stats.py  study.py
src/remindoapi/example/: fetchdata.py
tests/: conftest.py  test_cluster.py  test_helloworld.py  test_moments.py  test_recipes.py  test_reliability.py  test_results.py  test_stats.py  test_studies.py
