[tool.poetry]
name = "remindo-api"
version = "0.1.0"
description = "API wrapper for Remindo"
authors = ["Leonardo Vida <lleonardovida@gmail.com>"]
homepage = "https://github.com/leonardovida>/remindo-api"
repository = "https://github.com/leonardovida/remindo-api"
keywords = ["Remindo", "API", "wrapper"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pycryptodomex = "^3.9.7"
configparser = "^5.0.0"
pandas = "^1.0.3"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["remindo_api"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
